cmake_minimum_required(VERSION 3.7)
project(04_08_2017)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        libft/includes/libft.h
        libft/includes/libftprintf.h
        libft/libft/ft_atoi.c
        libft/libft/ft_bzero.c
        libft/libft/ft_extract_digits.c
        libft/libft/ft_int_strnew.c
        libft/libft/ft_isalnum.c
        libft/libft/ft_isalpha.c
        libft/libft/ft_isascii.c
        libft/libft/ft_isdigit.c
        libft/libft/ft_isint.c
        libft/libft/ft_isprint.c
        libft/libft/ft_isspace.c
        libft/libft/ft_itoa.c
        libft/libft/ft_lstadd.c
        libft/libft/ft_lstdel.c
        libft/libft/ft_lstdelone.c
        libft/libft/ft_lstiter.c
        libft/libft/ft_lstmap.c
        libft/libft/ft_lstnew.c
        libft/libft/ft_memalloc.c
        libft/libft/ft_memccpy.c
        libft/libft/ft_memchr.c
        libft/libft/ft_memcmp.c
        libft/libft/ft_memcpy.c
        libft/libft/ft_memdel.c
        libft/libft/ft_memmove.c
        libft/libft/ft_memset.c
        libft/libft/ft_print_list.c
        libft/libft/ft_putchar.c
        libft/libft/ft_putchar_fd.c
        libft/libft/ft_putendl.c
        libft/libft/ft_putendl_fd.c
        libft/libft/ft_putnbr.c
        libft/libft/ft_putnbr_fd.c
        libft/libft/ft_putstr.c
        libft/libft/ft_putstr_fd.c
        libft/libft/ft_strcat.c
        libft/libft/ft_strchr.c
        libft/libft/ft_strclr.c
        libft/libft/ft_strcmp.c
        libft/libft/ft_strcpy.c
        libft/libft/ft_strdel.c
        libft/libft/ft_strdup.c
        libft/libft/ft_strequ.c
        libft/libft/ft_striter.c
        libft/libft/ft_striteri.c
        libft/libft/ft_strjoin.c
        libft/libft/ft_strlcat.c
        libft/libft/ft_strlen.c
        libft/libft/ft_strmap.c
        libft/libft/ft_strmapi.c
        libft/libft/ft_strncat.c
        libft/libft/ft_strncmp.c
        libft/libft/ft_strncpy.c
        libft/libft/ft_strnequ.c
        libft/libft/ft_strnew.c
        libft/libft/ft_strnstr.c
        libft/libft/ft_strrchr.c
        libft/libft/ft_strsplit.c
        libft/libft/ft_strstr.c
        libft/libft/ft_strsub.c
        libft/libft/ft_strtrim.c
        libft/libft/ft_tolower.c
        libft/libft/ft_toupper.c
        libft/libft/ft_trim.c
        libft/libft/ft_w_c.c
        libft/libft/get_next_line.c
        libft/printf/arg_cast_conversion.c
        libft/printf/convert_digit.c
        libft/printf/convert_wchar.c
        libft/printf/ft_printf.c
        libft/printf/get_mod.c
        libft/printf/manage_struct.c
        libft/printf/parce_it.c
        libft/printf/print_char.c
        libft/printf/print_it.c
        libft/printf/print_order.c
        libft/printf/print_str.c
        libft/printf/put_txt.c
        libft/printf/skip_flags.c
        vm/operations/10_ldi.c
        vm/operations/11_sti.c
        vm/operations/12_fork.c
        vm/operations/13_lld.c
        vm/operations/14_lldi.c
        vm/operations/15_lfork.c
        vm/operations/16_aff.c
        vm/operations/1_live.c
        vm/operations/2_ld.c
        vm/operations/3_st.c
        vm/operations/4_add.c
        vm/operations/5_sub.c
        vm/operations/6_and.c
        vm/operations/7_or.c
        vm/operations/8_xor.c
        vm/operations/9_zjmp.c
        vm/check_args.c
        vm/check_magic.c
        vm/corewar_main.c
        vm/fetch.c
        vm/ft_error.c
        vm/ft_usage.c
        vm/general_struct.c
        vm/op.c
        vm/playground_prep.c
        vm/process_struct.c
        vm/processing.c
        vm/read_args.c
        vm/uncode_args.c
        vm/vm.h
        op.h)

add_executable(04_08_2017 ${SOURCE_FILES})